--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="ENG-UK">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aluguel de Veículos</title>
+    <title>WORLD WAR MASKS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,32 +15,32 @@
         <h2>Locadora IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="#">Carros</a>
+            <a href="#">World war masks</a>
             <a href="#">Contato</a>
         </nav>
     </header>
 
     <!-- Conteúdo principal -->
     <main>
-        <h1>Bem-vindo à Locadora de Veículos</h1>
-        <p>Encontre o carro ideal para sua viagem, trabalho ou lazer.</p>
+        <h1>Masks of the world war</h1>
+        <p>Many world war masks to see.</p>
 
-        <div class="carros">
-            <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=60"
-                alt="Carro esportivo vermelho">
+        <div class="World war masks">
+            <img src="https://images.newrepublic.com/3e6d21509f9a4d4059f82f56f615a4da3953aaaa.jpeg?auto=format&fit=crop&crop=faces&q=65&w=1000&ar=3%3A2&ixlib=react-9.10.0"
+                alt="Blitz in england, People wearing gas masks">
 
-            <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=60"
-                alt="SUV preto">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXrGUoH13cXvzr92tA34st2ZBMveUxMhTePidbLc2Sq5ienABNqPPtxKpBnBnLWM0QK4w&usqp=CAU"
+                alt="Baby mask">
 
-            <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=60"
-                alt="Carro branco">
+            <img src="https://images.saymedia-content.com/.image/t_share/MTc2NDU0NDE4NjcyNDYxNzg2/gas-masks-in-world-war-2-nobody-had-a-choice.jpg"
+                alt="Disney Mask">
                 
         </div>
     </main>
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Locadora IFPR - Todos os direitos reservados</p>
+        <p>&copy; 2025 Locadora IFPR - Alrights reserved</p>
     </footer>
 
 </body>
