--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>Locadora IFPR</h2>
+        <h2>World war gas masks</h2>
         <nav>
             <a href="index.html">Início</a>
             <a href="#">World war masks</a>
