--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Locadora IFPR - Alrights reserved</p>
+        <p>&copy; 1918 - 1945 Gas Masks - Alrights reserved</p>
     </footer>
 
 </body>
