--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h2>Pokemon IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="#">Pokemon</a>
-            <a href="#">Região</a>
+            <a href="#">Regiões</a>
+            <a href="#">Pokedex</a>
         </nav>
     </header>
 
