--- a/regioes.html
+++ b/regioes.html
@@ -15,7 +15,7 @@
         <h2>Pokemon IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="#">Pokemon</a>
+            <a href="regioes.html">Pokemon</a>
             <a href="#">Região</a>
         </nav>
     </header>
