--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Pokemon IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="#">Regiões</a>
+            <a href="regioes.html">Regiões</a>
             <a href="#">Pokedex</a>
         </nav>
     </header>
