--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>Locadora IFPR</h2>
+        <h2>CONTAS IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
             <a href="filiais.html">Filiais</a>
@@ -22,25 +22,25 @@
 
     <!-- Conteúdo principal -->
     <main>
-        <h1>Bem-vindo à Locadora de Veículos</h1>
-        <p>Encontre o carro ideal para sua viagem, trabalho ou lazer.</p>
+        <h1>Bem-vindo à VENDAS DE COMTAS IFPR</h1>
+        <p>Encontre SUA COMTA DE JOGOS AQUI PARA LAZER.</p>
 
-        <div class="carros">
-            <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=60"
-                alt="Carro esportivo vermelho">
+        <div class="COMTAS">
+            <img src="https://www.freefiremania.com.br/prints/free-fire-max-download.jpg"
+                alt="free fire">
 
-            <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=60"
+            <img src="https://s2-techtudo.glbimg.com/eaKVAPmv0JNwKrQVXXw1WcZcQGU=/0x0:695x390/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/q/H/YA7BdTRP25WBhC3SxE1w/roblox-game-pc-gratis-perguntas-respostas.jpg"
                 alt="SUV preto">
 
-            <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=60"
-                alt="Carro branco">
+            <img src="https://m.media-amazon.com/images/I/81gsSy5r13L.png"
+                alt="minecraft">
                 
         </div>
     </main>
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Locadora IFPR - Todos os direitos reservados</p>
+        <p>&copy; 2025 GAMES IFPR - TodDAS AS CONTA AQUI PRA VC</p>
     </footer>
 
 </body>
