--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="ENG-UK">
 
 <head>
@@ -14,9 +14,9 @@
     <header>
         <h2>World war gas masks</h2>
         <nav>
-            <a href="index.html">Início</a>
+            <a href="index.html">Initiation</a>
             <a href="#">World war masks</a>
-            <a href="#">Contato</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
