--- a/filias.html
+++ b/filias.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="ENG-UK">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Locadora IFPR - Filiais</title>
+    <title>WORLD WAR MASKS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,21 +12,21 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>Locadora IFPR</h2>
+        <h2>GAS MASKS</h2>
         <nav>
-            <a href="index.html">Início</a>
-            <a href="filiais.html">Filiais</a>
-            <a href="#">Contato</a>
+            <a href="index.html">Initiation</a>
+            <a href="filiais.html">World war masks</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
     <!-- Conteúdo principal -->
     <main>
-        <h1>Nossas Filiais</h1>
+        <h1>Masks of the world war</h1>
         <div class="filiais">
             <div class="filial">
                 <h2>Filial Curitiba</h2>
-                <p>Rua das Flores, 123 - Centro</p>
+                <p>Lambeth Rd, London SE1 6HZ</p>
             </div>
             <div class="filial">
                 <h2>Filial Ponta Grossa</h2>
@@ -34,14 +34,14 @@
             </div>
             <div class="filial">
                 <h2>Filial Telêmaco Borba</h2>
-                <p>Rua Paraná, 789 - Centro</p>
+                <p>Lambeth Rd - London SE1 6HZ</p>
             </div>
         </div>
     </main>
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Locadora IFPR - Todos os direitos reservados</p>
+        <p>&copy; 1918 - 1945 Gas Masks - Alrights reserved</p>
     </footer>
 
 </body>
