--- a/filiais.html
+++ b/filiais.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Locadora IFPR - Filiais</title>
+    <title>Venda de Contas de Jogos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,36 +12,34 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>Locadora IFPR</h2>
+        <h2>Contas IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="filiais.html">Filiais</a>
+            <a href="filiais.html">Venda de Contas</a>
             <a href="#">Contato</a>
         </nav>
     </header>
 
     <!-- Conteúdo principal -->
     <main>
-        <h1>Nossas Filiais</h1>
-        <div class="filiais">
-            <div class="filial">
-                <h2>Filial Curitiba</h2>
-                <p>Rua das Flores, 123 - Centro</p>
-            </div>
-            <div class="filial">
-                <h2>Filial Ponta Grossa</h2>
-                <p>Avenida Vicente Machado, 456 - Centro</p>
-            </div>
-            <div class="filial">
-                <h2>Filial Telêmaco Borba</h2>
-                <p>Rua Paraná, 789 - Centro</p>
-            </div>
+        <h1>Bem-vindo à Vendas de Contas IFPR</h1>
+        <p>Encontre sua conta de jogos aqui para lazer.</p>
+
+        <div class="contas">
+            <img src="https://www.freefiremania.com.br/prints/free-fire-max-download.jpg"
+                 alt="Conta de Free Fire">
+
+            <img src="https://s2-techtudo.glbimg.com/eaKVAPmv0JNwKrQVXXw1WcZcQGU=/0x0:695x390/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/q/H/YA7BdTRP25WBhC3SxE1w/roblox-game-pc-gratis-perguntas-respostas.jpg"
+                 alt="Conta de Roblox">
+
+            <img src="https://m.media-amazon.com/images/I/81gsSy5r13L.png"
+                 alt="Conta de Minecraft">
         </div>
     </main>
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Locadora IFPR - Todos os direitos reservados</p>
+        <p>&copy; 2025 Games IFPR - Todas as contas aqui para você</p>
     </footer>
 
 </body>
