--- a/filias.html
+++ b/filias.html
@@ -22,10 +22,10 @@
 
     <!-- Conteúdo principal -->
     <main>
-        <h1>Masks of the world war</h1>
+        <h1>Our unit</h1>
         <div class="filiais">
             <div class="filial">
-                <h2>Filial Curitiba</h2>
+                <h2>Unit London</h2>
                 <p>Lambeth Rd, London SE1 6HZ</p>
             </div>
             <div class="filial">
