--- a/filiais.html
+++ b/filiais.html
@@ -23,7 +23,7 @@
     <!-- Conteúdo principal -->
     <main>
         <h1>Bem-vindo às Vendas de Contas IFPR</h1>
-        <p>Escolha sua conta favorita para jogar Free Fire, Roblox e Minecraft.</p>
+        <p>Encontre sua conta de jogos favorita para lazer e diversão.</p>
 
         <div class="contas">
             <img src="https://www.freefiremania.com.br/prints/free-fire-max-download.jpg" alt="Conta de Free Fire">
