--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>World war gas masks</h2>
         <nav>
             <a href="index.html">Initiation</a>
-            <a href="#">World war masks</a>
+            <a href="filias.html">World war masks</a>
             <a href="#">Contact</a>
         </nav>
     </header>
