--- a/filias.html
+++ b/filias.html
@@ -12,7 +12,7 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>GAS MASKS</h2>
+        <h2>Museum</h2>
         <nav>
             <a href="index.html">Initiation</a>
             <a href="filiais.html">World war masks</a>
@@ -29,12 +29,12 @@
                 <p>Lambeth Rd, London SE1 6HZ</p>
             </div>
             <div class="filial">
-                <h2>Filial Ponta Grossa</h2>
-                <p>Avenida Vicente Machado, 456 - Centro</p>
+                <h2>New Orleans's Historic Warehouse District</h2>
+                <p>945 Magazine St, New Orleans, LA 70130, United States</p>
             </div>
             <div class="filial">
-                <h2>Filial Telêmaco Borba</h2>
-                <p>Lambeth Rd - London SE1 6HZ</p>
+                <h2>The Devils Porridge</h2>
+                <p>Annan Rd, Eastriggs, Stanfield DG12 6TF, United Kingdom</p>
             </div>
         </div>
     </main>
