--- a/filiais.html
+++ b/filiais.html
@@ -2,52 +2,45 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Venda de contas de jogos para você se divertir com segurança. Encontre Free Fire, Roblox, Minecraft e mais.">
-    <meta name="keywords" content="vendas de contas, Free Fire, Roblox, Minecraft, jogos, IFPR">
-    <title>Vendas de Contas IFPR</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Venda de contas de jogos para você se divertir com segurança. Encontre Free Fire, Roblox, Minecraft e mais.">
+  <meta name="keywords" content="vendas de contas, Free Fire, Roblox, Minecraft, jogos, IFPR">
+  <title>Vendas de Contas IFPR</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <!-- Cabeçalho -->
-    <header>
-        <h1>Contas IFPR</h1>
-        <nav>
-            <a href="index.html">Início</a>
-            <a href="filiais.html" class="ativo">Venda de Contas</a>
-            <a href="#">Contato</a>
-        </nav>
-    </header>
+  <!-- Cabeçalho -->
+  <header>
+    <h1>Contas IFPR</h1>
+    <nav>
+      <a href="index.html">Início</a>
+      <a href="filiais.html" class="ativo">Venda de Contas</a>
+      <a href="#contato">Contato</a>
+    </nav>
+  </header>
 
-    <!-- Conteúdo principal -->
-    <main>
-        <h2>Bem-vindo às Vendas de Contas IFPR</h2>
-        <p>Encontre sua conta de jogos favorita para lazer e diversão. Confira as opções abaixo!</p>
+  <!-- Conteúdo principal -->
+  <main>
+    <h2>Bem-vindo às Vendas de Contas IFPR</h2>
+    <p>Escolha sua conta favorita e comece a jogar agora mesmo!</p>
 
-        <section class="contas">
-            <article class="conta">
-                <img src="https://www.freefiremania.com.br/prints/free-fire-max-download.jpg" alt="Conta de Free Fire - Jogo de batalha real online">
-                <p>Free Fire</p>
-            </article>
-            <article class="conta">
-                <img src="https://s2-techtudo.glbimg.com/eaKVAPmv0JNwKrQVXXw1WcZcQGU=/0x0:695x390/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/q/H/YA7BdTRP25WBhC3SxE1w/roblox-game-pc-gratis-perguntas-respostas.jpg" alt="Conta de Roblox - Jogo de construção e aventura">
-                <p>Roblox</p>
-            </article>
-            <article class="conta">
-                <img src="https://m.media-amazon.com/images/I/81gsSy5r13L.png" alt="Conta de Minecraft - Jogo de construção e exploração em mundo aberto">
-                <p>Minecraft</p>
-            </article>
-        </section>
-    </main>
+    <section class="contas">
+      <article class="conta">
+        <img src="https://www.freefiremania.com.br/prints/free-fire-max-download.jpg" alt="Conta de Free Fire">
+        <p>Free Fire</p>
+        <a href="#" class="btn">Ver Detalhes</a>
+      </article>
 
-    <!-- Rodapé -->
-    <footer>
-        <p>&copy; 2025 Games IFPR - Todas as contas aqui para você</p>
-    </footer>
+      <article class="conta">
+        <img src="https://s2-techtudo.glbimg.com/eaKVAPmv0JNwKrQVXXw1WcZcQGU=/0x0:695x390/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/q/H/YA7BdTRP25WBhC3SxE1w/roblox-game-pc-gratis-perguntas-respostas.jpg" alt="Conta de Roblox">
+        <p>Roblox</p>
+        <a href="#" class="btn">Ver Detalhes</a>
+      </article>
 
-</body>
-
-</html>
+      <article class="conta">
+        <img src="https://m.media-amazon.com/images/I/81gsSy5r13L.png" alt="Conta de Minecraft">
+        <p>Minecraft</p>
+        <a href="#" class=
