--- a/filiais.html
+++ b/filiais.html
@@ -44,4 +44,16 @@
         <img src="https://m.media-amazon.com/images/I/81gsSy5r13L.png" alt="Conta de Minecraft">
         <p>Minecraft</p>
         <a href="#" class=
-<!-- Seção de Contato --> <section class="contato" id="contato"> <h2>Entre em Contato</h2> <p>Tem dúvidas ou quer saber mais? Fale com a gente!</p> <div class="contato-info"> <p><strong>Email:</strong>oliveira.padilha.joao@gmail.com</p> <p><strong>WhatsApp:</strong> (42) 984411127</p> <p><strong>Instagram:</strong> @jpzim402</p> </div> </section>
+          
+<!-- Seção de Contato -->
+<section class="contato" id="contato">
+  <h2>Entre em Contato</h2>
+  <p>Tem dúvidas ou quer saber mais? Fale com a gente!</p>
+
+  <div class="contato-info">
+    <p><strong>Email:</strong> <a href="mailto:oliveira.padilha.joao@gmail.com">oliveira.padilha.joao@gmail.com</a></p>
+    <p><strong>WhatsApp:</strong> <a href="https://wa.me/5542984411127" target="_blank">(42) 98441-1127</a></p>
+    <p><strong>Instagram:</strong> <a href="https://instagram.com/jpzim402" target="_blank">@jpzim402</a></p>
+  </div>
+</section>
+
