--- a/filiais.html
+++ b/filiais.html
@@ -1,59 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Venda de contas de jogos para você se divertir com segurança. Encontre Free Fire, Roblox, Minecraft e mais.">
-  <meta name="keywords" content="vendas de contas, Free Fire, Roblox, Minecraft, jogos, IFPR">
-  <title>Vendas de Contas IFPR</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Locadora IFPR - Filiais</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        section {
+            padding: 40px 20px;
+            max-width: 800px;
+            margin: auto;
+            background-color: #fff;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h2 {
+            color: #333;
+            text-align: center;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            margin: 10px 0;
+        }
+        a.contact-link {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a.contact-link:hover {
+            text-decoration: underline;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
 </head>
-
 <body>
 
-  <!-- Cabeçalho -->
-  <header>
-    <h1>Contas IFPR</h1>
+<header>
+    <h1>Locadora IFPR</h1>
     <nav>
-      <a href="index.html">Início</a>
-      <a href="filiais.html" class="ativo">Venda de Contas</a>
-      <a href="#contato">Contato</a>
+        <a href="#filiais">Filiais</a>
+        <a href="#contato">Contato</a>
     </nav>
-  </header>
+</header>
 
-  <!-- Conteúdo principal -->
-  <main>
-    <h2>Bem-vindo às Vendas de Contas IFPR</h2>
-    <p>Escolha sua conta favorita e comece a jogar agora mesmo!</p>
-
-    <section class="contas">
-      <article class="conta">
-        <img src="https://www.freefiremania.com.br/prints/free-fire-max-download.jpg" alt="Conta de Free Fire">
-        <p>Free Fire</p>
-        <a href="#" class="btn">Ver Detalhes</a>
-      </article>
-
-      <article class="conta">
-        <img src="https://s2-techtudo.glbimg.com/eaKVAPmv0JNwKrQVXXw1WcZcQGU=/0x0:695x390/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/q/H/YA7BdTRP25WBhC3SxE1w/roblox-game-pc-gratis-perguntas-respostas.jpg" alt="Conta de Roblox">
-        <p>Roblox</p>
-        <a href="#" class="btn">Ver Detalhes</a>
-      </article>
-
-      <article class="conta">
-        <img src="https://m.media-amazon.com/images/I/81gsSy5r13L.png" alt="Conta de Minecraft">
-        <p>Minecraft</p>
-        <a href="#" class=
-          
-<!-- Seção de Contato -->
-<section class="contato" id="contato">
-  <h2>Entre em Contato</h2>
-  <p>Tem dúvidas ou quer saber mais? Fale com a gente!</p>
-
-  <div class="contato-info">
-    <p><strong>Email:</strong> <a href="mailto:oliveira.padilha.joao@gmail.com">oliveira.padilha.joao@gmail.com</a></p>
-    <p><strong>WhatsApp:</strong> <a href="https://wa.me/5542984411127" target="_blank">(42) 98441-1127</a></p>
-    <p><strong>Instagram:</strong> <a href="https://instagram.com/jpzim402" target="_blank">@jpzim402</a></p>
-  </div>
+<section id="filiais">
+    <h2>Nossas Filiais</h2>
+    <ul>
+        <li>Filial Curitiba - Rua Exemplo, 123</li>
+        <li>Filial Ponta Grossa - Rua Exemplo, 456</li>
+        <li>Filial Londrina - Rua Exemplo, 789</li>
+    </ul>
 </section>
 
+<section id="contato">
+    <h2>Contato</h2>
+    <ul>
+        <li>E-mail: <a class="contact-link" href="mailto:oliveira.padilha.joao@gmail.com">oliveira.padilha.joao@gmail.com</a></li>
+        <li>WhatsApp: <a class="contact-link" href="https://wa.me/5542984411127" target="_blank">(42) 98441-1127</a></li>
+        <li>Instagram: <a class="contact-link" href="https://instagram.com/jpzim402" target="_blank">@jpzim402</a></li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2025 Locadora IFPR. Todos os direitos reservados.</p>
+</footer>
+
+</body>
+</html>
