--- a/index.html
+++ b/index.html
@@ -2,45 +2,47 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aluguel de Veículos</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Locadora IFPR - Início</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-    <!-- Cabeçalho -->
     <header>
-        <h2>CONTAS IFPR</h2>
+        <h1>Locadora IFPR</h1>
         <nav>
             <a href="index.html">Início</a>
             <a href="filiais.html">Filiais</a>
-            <a href="#">Contato</a>
+            <a href="#contato">Contato</a>
         </nav>
     </header>
 
-    <!-- Conteúdo principal -->
     <main>
-        <h1>Bem-vindo à VENDAS DE COMTAS IFPR</h1>
-        <p>Encontre SUA COMTA DE JOGOS AQUI PARA LAZER.</p>
+        <section>
+            <h2>Bem-vindo à Locadora IFPR!</h2>
+            <p>
+                Aqui você encontra os melhores veículos para alugar, com atendimento personalizado e
+                filiais em várias cidades do Paraná.
+            </p>
+            <p>
+                Navegue pelo site para conhecer nossas filiais e entre em contato para mais informações.
+            </p>
+        </section>
 
-        <div class="COMTAS">
-            <img src="https://www.freefiremania.com.br/prints/free-fire-max-download.jpg"
-                alt="free fire">
-
-            <img src="https://s2-techtudo.glbimg.com/eaKVAPmv0JNwKrQVXXw1WcZcQGU=/0x0:695x390/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/q/H/YA7BdTRP25WBhC3SxE1w/roblox-game-pc-gratis-perguntas-respostas.jpg"
-                alt="SUV preto">
-
-            <img src="https://m.media-amazon.com/images/I/81gsSy5r13L.png"
-                alt="minecraft">
-                
-        </div>
+        <section id="contato">
+            <h2>Contato</h2>
+            <ul>
+                <li>E-mail: <a class="contact-link" href="mailto:oliveira.padilha.joao@gmail.com">oliveira.padilha.joao@gmail.com</a></li>
+                <li>WhatsApp: <a class="contact-link" href="https://wa.me/5542984411127" target="_blank">(42) 98441-1127</a></li>
+                <li>Instagram: <a class="contact-link" href="https://instagram.com/jpzim402" target="_blank">@jpzim402</a></li>
+            </ul>
+        </section>
     </main>
 
-    <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 GAMES IFPR - TodDAS AS CONTA AQUI PRA VC</p>
+        <p>&copy; 2025 Locadora IFPR. Todos os direitos reservados.</p>
     </footer>
 
 </body>
