--- a/regioes.html
+++ b/regioes.html
@@ -14,8 +14,8 @@
         }
 
         header {
-            background-color: #333;
-            color: white;
+            background-color: #FF3636;
+            color: red;
             padding: 15px 20px;
         }
 
@@ -96,8 +96,8 @@
         <h2>Pokemon IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="regioes.html">Pokemon</a>
-            <a href="#">Região</a>
+            <a href="regioes.html">Regiões</a>
+            <a href="#">Pokedex</a>
         </nav>
     </header>
 
