--- a/regioes.html
+++ b/regioes.html
@@ -15,7 +15,7 @@
 
         header {
             background-color: #FF3636;
-            color: red;
+            color: white;
             padding: 15px 20px;
         }
 
