--- a/regioes.html
+++ b/regioes.html
@@ -14,7 +14,7 @@
         }
 
         header {
-            background-color: #FF3636;
+            background-color: #C10000;
             color: white;
             padding: 15px 20px;
         }
