--- a/contato.html
+++ b/contato.html
@@ -14,9 +14,9 @@
     <header>
         <h2>Locadora IFPR</h2>
         <nav>
-            <a href="index.html">Início</a>
-            <a href="filiais.html">Filiais</a>
-            <a href="contato.html">Contato</a>
+            <a href="index.html">Initiation</a>
+            <a href="filiais.html">World war masks</a>
+            <a href="contato.html">Contact</a>
         </nav>
     </header>
 
