--- a/regioes.html
+++ b/regioes.html
@@ -93,11 +93,11 @@
 <body>
     <!-- Cabeçalho -->
     <header>
-        <h2>Pokemon IFPR</h2>
+        <h2>Pokémon IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
             <a href="regioes.html">Regiões</a>
-            <a href="#">Pokedex</a>
+            <a href="pokedex.html">Pokedex</a>
         </nav>
     </header>
 
