--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>Pokemon IFPR</h2>
+        <h2>Pokémon IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
             <a href="regioes.html">Regiões</a>
-            <a href="#">Pokedex</a>
+            <a href="pokedex.html">Pokedex</a>
         </nav>
     </header>
 
