--- a/contato.html
+++ b/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="eng-UK">
 
 <head>
     <meta charset="UTF-8">
@@ -24,22 +24,22 @@
     <main>
         <h1>Entre em Contato</h1>
         <form class="contato-form">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Type your name" required>
 
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+            <input type="email" id="email" name="email" placeholder="Type your e-mail" required>
 
-            <label for="mensagem">Mensagem:</label>
-            <textarea id="mensagem" name="mensagem" rows="5" placeholder="Escreva sua mensagem"></textarea>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" placeholder="Escreva sua message"></textarea>
 
-            <button type="submit">Enviar</button>
+            <button type="submit">Submit</button>
         </form>
     </main>
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Locadora IFPR - Todos os direitos reservados</p>
+        <p>&copy; © 1918 - 1945 Gas Masks - Alrights reserved</p>
     </footer>
 
 </body>
