--- a/pokedex.html
+++ b/pokedex.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Locadora IFPR - Contato</title>
+    <title>Pokémon IFPR - Pokedex</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,16 +22,16 @@
 
     <!-- Conteúdo principal -->
     <main>
-        <h1>Entre em Contato</h1>
+        <h1>Informações do Pokémon</h1>
         <form class="contato-form">
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+            <input type="text" id="nome" name="nome" placeholder="Digite o nome do Pokémon" required>
 
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+            <label for="regiao">Região:</label>
+            <input type="regiao" id="regiao" name="regiao" placeholder="Digite a Região" required>
 
             <label for="mensagem">Mensagem:</label>
-            <textarea id="mensagem" name="mensagem" rows="5" placeholder="Escreva sua mensagem"></textarea>
+            <textarea id="tipagem" name="tipagem" placeholder="Digite a Tipagem do Pokémon"></textarea>
 
             <button type="submit">Enviar</button>
         </form>
@@ -39,7 +39,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Locadora IFPR - Todos os direitos reservados</p>
+        <p>&copy; 2025 Pokémon IFPR - Todos os direitos dos Pokémon</p>
     </footer>
 
 </body>
