--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WORLD WAR MASKS</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>WORLD WAR MASKS</h2>
+        <h2>Contact</h2>
         <nav>
             <a href="index.html">Initiation</a>
             <a href="filiais.html">World war masks</a>
