--- a/filias.html
+++ b/filias.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="index.html">Initiation</a>
             <a href="filiais.html">World war masks</a>
-            <a href="#">Contact</a>
+            <a href="contato.html">Contact</a>
         </nav>
     </header>
 
