--- a/regioes.html
+++ b/regioes.html
@@ -105,43 +105,44 @@
     <main>
         <h1>Todas as Regiões</h1>
         <div class="regioes">
-            <div class="regiao">
-                <h2>Região de Kanto</h2>
-                <p>1° Geração</p>
-            </div>
-            <div class="regiao">
-                <h2>Região de Johto</h2>
-                <p>2° Geração</p>
-            </div>
-            <div class="regiao">
-                <h2>Região de Sinnoh</h2>
-                <p>3° Geração</p>
-            </div>
-            <div class="regiao">
-                <h2>Região de Unova</h2>
-                <p>4° Geração</p>
-            </div>
-            <div class="regiao">
-                <h2>Região de Kalos</h2>
-                <p>5° Geração</p>
-            </div>
-            <div class="regiao">
-                <h2>Região de Alola</h2>
-                <p>6° Geração</p>
-            </div>
-            <div class="regiao">
-                <h2>Região de Galar</h2>
-                <p>7° Geração</p>
-            </div>
-            <div class="regiao">
-                <h2>Região de Hisui</h2>
-                <p>8° Geração</p>
-            </div>
-            <div class="regiao">
-                <h2>Região de Paldea</h2>
-                <p>9° Geração</p>
-            </div>
-        </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=kanto" target="_blank">Região de Kanto</a></h2>
+        <p>1° Geração</p>
+    </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=johto" target="_blank">Região de Johto</a></h2>
+        <p>2° Geração</p>
+    </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=hoenn" target="_blank">Região de Hoenn</a></h2>
+        <p>3° Geração</p>
+    </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=sinnoh" target="_blank">Região de Sinnoh</a></h2>
+        <p>4° Geração</p>
+    </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=unova" target="_blank">Região de Unova</a></h2>
+        <p>5° Geração</p>
+    </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=kalos" target="_blank">Região de Kalos</a></h2>
+        <p>6° Geração</p>
+    </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=alola" target="_blank">Região de Alola</a></h2>
+        <p>7° Geração</p>
+    </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=galar" target="_blank">Região de Galar</a></h2>
+        <p>8° Geração</p>
+    </div>
+    <div class="regiao">
+        <h2><a href="https://www.pokemon.com/br/pokedex?region=paldea" target="_blank">Região de Paldea</a></h2>
+        <p>9° Geração</p>
+    </div>
+</div>
+
     </main>
 
     <!-- Rodapé -->
