--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
 
     <!-- Conteúdo principal -->
     <main>
-        <h1>Entre em Contato</h1>
+        <h1>Enter with contact</h1>
         <form class="contato-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" placeholder="Type your name" required>
