--- a/pokedex.html
+++ b/pokedex.html
@@ -23,7 +23,7 @@
     <!-- Conteúdo principal -->
     <main>
         <h1>Busca pelo Pokémon</h1>
-        <form class="contato-form" id="pokedex-form">
+        <form class="contato-form" action="action_planilha.php" method="POST">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" placeholder="Digite o nome do Pokémon desejado" required>
 
