--- a/regioes.html
+++ b/regioes.html
@@ -106,39 +106,39 @@
         <h1>Todas as Regiões</h1>
         <div class="regioes">
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=kanto" target="_blank">Região de Kanto</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Kanto">Região de Kanto</a></h2>
         <p>1° Geração</p>
     </div>
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=johto" target="_blank">Região de Johto</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Johto">Região de Johto</a></h2>
         <p>2° Geração</p>
     </div>
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=hoenn" target="_blank">Região de Hoenn</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Hoenn">Região de Hoenn</a></h2>
         <p>3° Geração</p>
     </div>
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=sinnoh" target="_blank">Região de Sinnoh</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Sinnoh">Região de Sinnoh</a></h2>
         <p>4° Geração</p>
     </div>
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=unova" target="_blank">Região de Unova</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Unova">Região de Unova</a></h2>
         <p>5° Geração</p>
     </div>
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=kalos" target="_blank">Região de Kalos</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Kalos">Região de Kalos</a></h2>
         <p>6° Geração</p>
     </div>
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=alola" target="_blank">Região de Alola</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Alola">Região de Alola</a></h2>
         <p>7° Geração</p>
     </div>
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=galar" target="_blank">Região de Galar</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Galar">Região de Galar</a></h2>
         <p>8° Geração</p>
     </div>
     <div class="regiao">
-        <h2><a href="https://www.pokemon.com/br/pokedex?region=paldea" target="_blank">Região de Paldea</a></h2>
+        <h2><a href="https://pokemon.fandom.com/wiki/Paldea">Região de Paldea</a></h2>
         <p>9° Geração</p>
     </div>
 </div>
