--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,7 @@
     <!-- Conteúdo principal -->
     <main>
         <h1>Entre em Contato</h1>
-        <form class="contato-form" action="action_planilha.php" method="POST">
+        <form class="contato-form" action="https://script.google.com/macros/s/AKfycbx6dp8-e1-1PplYsa_E9DZ7FK2jQJMj_S6plKP1nx57D7LfWPw5a1bo0UK69fpHpCzx/exec" method="POST">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
 
