--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,7 @@
     <!-- Conteúdo principal -->
     <main>
         <h1>Enter with contact</h1>
-        <form class="contato-form" action="action_planilha.php" method="POST">
+        <form class="contato-form" action="URL_DO_SEU_WEB_APP" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" placeholder="Type your name" required>
 
