--- a/regioes.html
+++ b/regioes.html
@@ -54,7 +54,7 @@
 
         /* Cada região com altura fixa e estilo */
         .regiao {
-            height: 120px; /* altura ajustada para dar espaço ao banner */
+            height: 150px; /* altura ajustada para dar mais espaço ao banner */
             background-color: white;
             border: 1px solid #333;
             margin-bottom: 10px;
@@ -63,28 +63,33 @@
             border-radius: 6px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             position: relative;
+            overflow: hidden;
         }
 
         .regiao h2 {
             margin: 0 0 8px 0;
             font-size: 1.3rem;
-            color: #222;
+            color: #fff; /* Texto das regiões em branco para contraste com o banner */
+            z-index: 1;
         }
 
         .regiao p {
             margin: 0;
             font-size: 1rem;
-            color: #555;
+            color: #fff; /* Texto das regiões em branco para contraste com o banner */
+            z-index: 1;
         }
 
+        /* Banner (imagem) com opacidade e posicionamento abaixo do conteúdo */
         .regiao img {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 60px;
+            height: 100%;
             object-fit: cover;
-            border-radius: 6px;
+            opacity: 0.5; /* Banner com 50% de opacidade */
+            z-index: 0; /* Coloca a imagem abaixo do texto */
         }
 
         footer {
@@ -117,7 +122,7 @@
         <h1>Todas as Regiões</h1>
         <div class="regioes">
             <div class="regiao">
-                <img src="https://i.pinimg.com/1200x/e0/08/66/e0086621332479599e0cd47e2d73cae4.jpg" alt="Banner de Kanto">
+                <img src="https://example.com/kanto-banner.jpg" alt="Banner de Kanto">
                 <h2><a href="https://pokemon.fandom.com/wiki/Kanto">Região de Kanto</a></h2>
                 <p>1° Geração</p>
             </div>
