--- a/regioes.html
+++ b/regioes.html
@@ -122,7 +122,7 @@
         <h1>Todas as Regiões</h1>
         <div class="regioes">
             <div class="regiao">
-                <img src="https://example.com/kanto-banner.jpg" alt="Banner de Kanto">
+                <img src="https://i.pinimg.com/1200x/e0/08/66/e0086621332479599e0cd47e2d73cae4.jpg" alt="Banner de Kanto">
                 <h2><a href="https://pokemon.fandom.com/wiki/Kanto">Região de Kanto</a></h2>
                 <p>1° Geração</p>
             </div>
