--- a/contato.html
+++ b/contato.html
@@ -39,7 +39,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; © 1918 - 1945 Gas Masks - Alrights reserved</p>
+        <p>&copy; 1918 - 1945 Gas Masks - Alrights reserved</p>
     </footer>
 
 </body>
